language/move-vm/transactional-tests/tests/references/borrow_in_loop_source.exp
processed 2 tasks

task 0 'publish'. lines 1-18:
Error: error[E07003]: invalid operation, could create dangling a reference
   ┌─ /var/folders/zf/5yndrchx2_7df8p5yfnkpv8r0000gn/T/.tmpMwynew:11:9
   │
11 │         y = S { f: 1 };
   │         ^ Invalid assignment of variable 'y'
12 │         assert!(r.f == *f, 0);
13 │         r = &y;
   │             -- It is still being borrowed by this reference



task 1 'run'. lines 20-20:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
